--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "codegen": "graphql-codegen --config codegen.ts",
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "eslint"
     },
     "dependencies": {
+        "@apollo/client": "^4.0.9",
+        "graphql": "^16.12.0",
         "next": "16.0.3",
         "next-client-cookies": "^2.1.0",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
-        "react-router-dom": "^7.9.6"
+        "react-router-dom": "^7.9.6",
+        "rxjs": "^7.8.2"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^6.1.0",
+        "@graphql-codegen/typescript": "^5.0.5",
+        "@graphql-codegen/typescript-operations": "^5.0.5",
         "@tailwindcss/postcss": "^4",
         "@types/node": "^24",
         "@types/react": "^19",
