--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "next-client-cookies": "^2.1.0",
         "react": "19.2.3",
         "react-dom": "19.2.3",
+        "react-globe.gl": "^2.37.0",
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.11.0",
